# powersaver

./: .gitignore  Cargo.toml  Readme.md  build.rs  powersaver.rc  powersaver.yaml
src/: main.rs
