[package]
name = "powersaver"
description = "automatically manages windows power schemes by running applications."
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
winapi = { version = "0.3.9", features = ["winuser", "powersetting"] }
sysinfo = "0.23.9"
serde_yaml = "0.8"
regex = "1.5.5"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
notify = "5.0.0-pre.14"

[features]
console = []
