[package]
name = "powersaver"
description = "automatically manages windows power schemes by running applications."
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
winapi = { version = "0.3.9", features = ["winuser", "powersetting"] }
sysinfo = "0.29.10"
serde_yaml = "0.9.25"
regex = "1.9.5"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25.2"
notify = "6.1.1"
tray-item = "0.7.0"
open = "5.0.0"

[build-dependencies]
windres = "*"

[features]
console = []
